# OneShot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
api/: Dockerfile  openapi.json
api/alembic/: env.py
api/alembic/versions/: 0000_base.py  0001_add_timestamps.py  56fd3d38fe31_add_timestamps.py  b08128e4dc1c_add_token_expiration.py
api/app/: config.py  main.py  rng.py
api/app/uploads/: __init__.py  models.py  router.py
api/tests/: helpers.py  test_oneshot.py  test_oneshot_integration.py
docs/: README.md  openapi-contract.md
oneshot-app/: .env.example  README.md
oneshot-app/api/: pyproject.toml
oneshot-app/web/: package.json
oneshot-app/web/src/components/: Layout.tsx
oneshot-app/web/src/pages/: Landing.tsx
scripts/ci/: package_frontend.sh
web/: Caddyfile  Dockerfile  index.html  package-lock.json  playwright.config.ts
web/e2e/: oneshot.spec.ts
web/scripts/: gen-openapi.mjs
web/src/: App.tsx
web/src/api/: openapi.ts  types.ts
web/src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx  OneShotUpload.tsx  Register.tsx  index.ts
web/src/pages/__tests__/: Admin.test.tsx  Dashboard.test.tsx  OneShotUpload.test.tsx
web/src/utils/: formatBytes.ts
