[project]
name = "oneshot-app-api"
version = "0.1.0"
description = "API for oneshot-app"
requires-python = ">=3.11"
dependencies = [
    "h4ckath0n>=0.1.9",
    "cryptography>=44.0",
    "python-multipart>=0.0.9",
    "pytest>=8.0.0",
]

[project.scripts]
h4ckath0n = "h4ckath0n.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
